# HEACalculator

./: .gitignore  HEA.py  HEACalculatorUI.pyw  LICENSE  README.md  README.rst  alloys.py  main.py  mixing.csv  mixing.py  requirements.txt  setup.cfg  setup.py
HEACalculator/: .travis.yml  HEACalculator_rc.py  HEACalculator_rc.py.bak  __main__.py  cli.py  gui.py  main.py
HEACalculator/core/: Converter.py  HEA.py  helpers.py
HEACalculator/data/: Elements.py  FormationEnthalpy.py  MixingEnthalpy.py  __init__.py
HEACalculator/ui/: HEACalculator.qrc  HEACalculatorMain.py  HEACalculatorMain.ui  HEACalculator_rc.py.bak  aboutPage.py  aboutPage.ui  batchCalculationsPage.py  batchCalculationsPage.ui  converterPage.py  converterPage.ui  parametersPage.py  parametersPage.ui  rangeSearchPage.ui
data/: mixing.csv
docs/: conf.py  index.rst
docs/source/: Converter.rst  Data.rst  HEA.rst  Helpers.rst  Installation.rst  Usage.rst
tests/: test_HEA.py  test_converter.py
