[metadata]
name = HEACalculator
version = 1.3.0
description = HEACalculator is a Python tool for calculating phenomenological parameters based on thermodynamics and physics in order to predict the formation of solid solutions in High Entropy Alloys (HEAs)
readme = file: README.md
license = GPLv3
license_files = file: LICENSE
author = Doguhan Sariturk
author_email = dogu.sariturk@gmail.com
url = https://github.com/dogusariturk/HEACalculator
classifiers =
    Intended Audience :: Science/Research,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Natural Language :: English,
    Topic :: Scientific/Engineering,
    Topic :: Utilities,
    Programming Language :: Python
dependencies =
    numpy~=1.23.4
    PyQt5
    typer~=0.7.0

[options]
zip_safe = True
packages = find:
platforms = any
include_package_data = True
install_requires =
    pandas == 1.4.1
    PyYAML >= 6.0
    typer

[options.package_data]
* =
    *.png
    *.ui
    *.ico

[options.entry_points]
console_scripts =
    HEACalculator = HEACalculator.__main__:app

[options.extras_require]
docs =
    sphinx-rtd-theme
    myst-parser
